# OpenTutorGym

./: .gitignore  LICENSE  Modelfile  README.md  app.py  app_deprecated.py  conversations_Falcon3-7B-Instruct.json  conversations_Llama-3.1-8B-Instruct.json  conversations_Qwen2.5-7B-Instruct-lora.json  conversations_Qwen2.5-7B-Instruct.json  datasets.py  generate.py  judge.py  pyproject.toml  requirements.txt  test.py
evaluate/: Datasets.py  constants.py  download_datasets.py  evaluate_conversation.py  generate.py  generate_conversation.py  main.py  predict.py  run.sh  run_model_predictions.py  serve.sh  test.py  utils.py
examples/: evaluate_answer.py  evaluate_answer_vllm.py  evaluate_conversation.py  evaluate_conversation_file.py  fine_tune.py  finetune_dpo.py  finetune_sft.py  full_example.py  generate_conversation.py  generate_conversation_image.py  generate_multiple_conversations.py  inspect_dataset.py  results.csv  start_server.sh  start_student_server.sh  start_tutor_server.sh  visualize.py
examples/gemma2:27b/qwen2.5:3b/gsm8k/train/: config.json
scripts/: finetune.slurm  generate.slurm  start_server.sh  start_student_server.sh
src/: Datasets.py  evaluate.py  evaluate_answer.py  evaluate_conversation.py  exam.py  generate_conversation.py  metrics.py  plot.py  predict.py  run_model_predictions.py  serve.sh  serve_judge.sh  serve_multiple.sh  train.py  trainer.py  utils.py
src/configs/: dpo_config.yaml  grpo_config.yaml  lora_config.yaml  sft_config.yaml
