[project]
name = "ai-tutor"
version = "0.1.0"
description = "ai tutoring system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes==0.42.0",
    "dotenv>=0.9.9",
    "gradio>=5.44.1",
    "ollama>=0.5.3",
    "openai>=1.100.0",
    "peft>=0.17.0",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "trl>=0.21.0",
]
